feat: add product feature
